custom_target(
    'index.html',
    command: [
        asciidoctor_exe,
        '@INPUT@',
        '-D',
        '@OUTDIR@',
    ],
    input: files('index.adoc'),
    output: ['index.html'],
    depend_files: files(
        'algorithm.adoc',
        'atomic.adoc',
        'atomic_bitset.adoc',
        'bit.adoc',
        'bitset.adoc',
        'byterator.adoc',
        'cached.adoc',
        'call_by_need.adoc',
        'compiler.adoc',
        'concepts.adoc',
        'ct_conversions.adoc',
        'ct_format.adoc',
        'ct_string.adoc',
        'cx_map.adoc',
        'cx_multimap.adoc',
        'cx_queue.adoc',
        'cx_set.adoc',
        'cx_vector.adoc',
        'for_each_n_args.adoc',
        'function_traits.adoc',
        'functional.adoc',
        'intro.adoc',
        'intrusive_forward_list.adoc',
        'intrusive_list.adoc',
        'iterator.adoc',
        'latched.adoc',
        'memory.adoc',
        'numeric.adoc',
        'optional.adoc',
        'panic.adoc',
        'priority.adoc',
        'ranges.adoc',
        'rollover.adoc',
        'span.adoc',
        'static_assert.adoc',
        'tuple.adoc',
        'tuple_algorithms.adoc',
        'tuple_destructure.adoc',
        'type_traits.adoc',
        'udls.adoc',
        'utility.adoc',
    ),
    install: true,
    install_tag: 'doc',
    install_dir: get_option('datadir') / 'doc' / meson.project_name(),
    build_by_default: false,
)
